Grammatica/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Grammatica.Par
  ( happyError
  , myLexer
  , pProgram
  , pListDecl
  , pDecl
  , pListParameter
  , pParameter
  , pType
  , pBasicType
  , pBoolean
  , pCompoundType
  , pBlock
  , pListStatement
  , pStatement
  , pAssignment_op
  , pJumpStatement
  , pSelectionStatement
  , pIterStatement
  , pRExpr
  , pRExpr1
  , pRExpr2
  , pRExpr3
  , pRExpr4
  , pRExpr5
  , pRExpr6
  , pRExpr7
  , pRExpr8
  , pRExpr9
  , pRExpr10
  , pRExpr11
  , pRExpr12
  , pRExpr13
  , pRExpr14
  , pListRExpr13
  , pRExpr15
  , pRExpr16
  , pIncr
  , pLExpr
  , pLExpr2
  , pBLExpr
  ) where

import Prelude

import qualified Grammatica.Abs
import Grammatica.Lex

}

%name pProgram Program
%name pListDecl ListDecl
%name pDecl Decl
%name pListParameter ListParameter
%name pParameter Parameter
%name pType Type
%name pBasicType BasicType
%name pBoolean Boolean
%name pCompoundType CompoundType
%name pBlock Block
%name pListStatement ListStatement
%name pStatement Statement
%name pAssignment_op Assignment_op
%name pJumpStatement JumpStatement
%name pSelectionStatement SelectionStatement
%name pIterStatement IterStatement
%name pRExpr RExpr
%name pRExpr1 RExpr1
%name pRExpr2 RExpr2
%name pRExpr3 RExpr3
%name pRExpr4 RExpr4
%name pRExpr5 RExpr5
%name pRExpr6 RExpr6
%name pRExpr7 RExpr7
%name pRExpr8 RExpr8
%name pRExpr9 RExpr9
%name pRExpr10 RExpr10
%name pRExpr11 RExpr11
%name pRExpr12 RExpr12
%name pRExpr13 RExpr13
%name pRExpr14 RExpr14
%name pListRExpr13 ListRExpr13
%name pRExpr15 RExpr15
%name pRExpr16 RExpr16
%name pIncr Incr
%name pLExpr LExpr
%name pLExpr2 LExpr2
%name pBLExpr BLExpr
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '$'        { PT _ (TS _ 3)  }
  '%'        { PT _ (TS _ 4)  }
  '&'        { PT _ (TS _ 5)  }
  '&&'       { PT _ (TS _ 6)  }
  '&='       { PT _ (TS _ 7)  }
  '('        { PT _ (TS _ 8)  }
  ')'        { PT _ (TS _ 9)  }
  '*'        { PT _ (TS _ 10) }
  '**'       { PT _ (TS _ 11) }
  '*='       { PT _ (TS _ 12) }
  '+'        { PT _ (TS _ 13) }
  '++'       { PT _ (TS _ 14) }
  '+='       { PT _ (TS _ 15) }
  ','        { PT _ (TS _ 16) }
  '-'        { PT _ (TS _ 17) }
  '--'       { PT _ (TS _ 18) }
  '-='       { PT _ (TS _ 19) }
  '/'        { PT _ (TS _ 20) }
  '/='       { PT _ (TS _ 21) }
  ':'        { PT _ (TS _ 22) }
  ':='       { PT _ (TS _ 23) }
  '<'        { PT _ (TS _ 24) }
  '<='       { PT _ (TS _ 25) }
  '=='       { PT _ (TS _ 26) }
  '>'        { PT _ (TS _ 27) }
  '>='       { PT _ (TS _ 28) }
  'False'    { PT _ (TS _ 29) }
  'True'     { PT _ (TS _ 30) }
  '['        { PT _ (TS _ 31) }
  ']'        { PT _ (TS _ 32) }
  '^='       { PT _ (TS _ 33) }
  'bool'     { PT _ (TS _ 34) }
  'break'    { PT _ (TS _ 35) }
  'char'     { PT _ (TS _ 36) }
  'continue' { PT _ (TS _ 37) }
  'def'      { PT _ (TS _ 38) }
  'else'     { PT _ (TS _ 39) }
  'float'    { PT _ (TS _ 40) }
  'if'       { PT _ (TS _ 41) }
  'int'      { PT _ (TS _ 42) }
  'return'   { PT _ (TS _ 43) }
  'string'   { PT _ (TS _ 44) }
  'var'      { PT _ (TS _ 45) }
  'void'     { PT _ (TS _ 46) }
  'while'    { PT _ (TS _ 47) }
  '{'        { PT _ (TS _ 48) }
  '|='       { PT _ (TS _ 49) }
  '||'       { PT _ (TS _ 50) }
  '}'        { PT _ (TS _ 51) }
  '§'        { PT _ (TS _ 52) }
  L_Ident    { PT _ (TV $$)   }
  L_charac   { PT _ (TC $$)   }
  L_doubl    { PT _ (TD $$)   }
  L_integ    { PT _ (TI $$)   }
  L_quoted   { PT _ (TL $$)   }

%%

Ident :: { Grammatica.Abs.Ident }
Ident  : L_Ident { Grammatica.Abs.Ident $1 }

Char    :: { Char }
Char     : L_charac { (read $1) :: Char }

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { Grammatica.Abs.Program }
Program : ListDecl { Grammatica.Abs.Prog $1 }

ListDecl :: { [Grammatica.Abs.Decl] }
ListDecl
  : {- empty -} { [] }
  | Decl { (:[]) $1 }
  | Decl '§' ListDecl { (:) $1 $3 }

Decl :: { Grammatica.Abs.Decl }
Decl
  : 'def' Ident ':' Type ':=' RExpr { Grammatica.Abs.ConstDecl $2 $4 $6 }
  | 'var' Ident ':' Type ':=' RExpr { Grammatica.Abs.VarDecl $2 $4 $6 }
  | 'def' Ident '(' ListParameter ')' ':' Type Block { Grammatica.Abs.FunDecl $2 $4 $7 $8 }

ListParameter :: { [Grammatica.Abs.Parameter] }
ListParameter
  : {- empty -} { [] }
  | Parameter { (:[]) $1 }
  | Parameter ',' ListParameter { (:) $1 $3 }

Parameter :: { Grammatica.Abs.Parameter }
Parameter : Ident ':' Type { Grammatica.Abs.Param $1 $3 }

Type :: { Grammatica.Abs.Type }
Type
  : BasicType { Grammatica.Abs.BasType $1 }
  | CompoundType { Grammatica.Abs.CompType $1 }

BasicType :: { Grammatica.Abs.BasicType }
BasicType
  : 'bool' { Grammatica.Abs.BasicType_bool }
  | 'char' { Grammatica.Abs.BasicType_char }
  | 'int' { Grammatica.Abs.BasicType_int }
  | 'string' { Grammatica.Abs.BasicType_string }
  | 'float' { Grammatica.Abs.BasicType_float }
  | 'void' { Grammatica.Abs.BasicType_void }

Boolean :: { Grammatica.Abs.Boolean }
Boolean
  : 'True' { Grammatica.Abs.Boolean_True }
  | 'False' { Grammatica.Abs.Boolean_False }

CompoundType :: { Grammatica.Abs.CompoundType }
CompoundType
  : '[' RExpr ']' Type { Grammatica.Abs.ArrDef $2 $4 }
  | '[' ']' Type { Grammatica.Abs.ArrPartialDef $3 }
  | '&' Type { Grammatica.Abs.Pointer $2 }

Block :: { Grammatica.Abs.Block }
Block
  : '{' ListDecl ListStatement '}' { Grammatica.Abs.BlockDecl $2 $3 }

ListStatement :: { [Grammatica.Abs.Statement] }
ListStatement
  : {- empty -} { [] }
  | Statement { (:[]) $1 }
  | Statement '§' ListStatement { (:) $1 $3 }

Statement :: { Grammatica.Abs.Statement }
Statement
  : Block { Grammatica.Abs.Comp $1 }
  | JumpStatement { Grammatica.Abs.Jmp $1 }
  | IterStatement { Grammatica.Abs.Iter $1 }
  | SelectionStatement { Grammatica.Abs.Sel $1 }
  | LExpr Assignment_op RExpr { Grammatica.Abs.Assgn $1 $2 $3 }
  | LExpr { Grammatica.Abs.LExprStatement $1 }

Assignment_op :: { Grammatica.Abs.Assignment_op }
Assignment_op
  : ':=' { Grammatica.Abs.Assign }
  | '*=' { Grammatica.Abs.AssgnMul }
  | '+=' { Grammatica.Abs.AssgnAdd }
  | '/=' { Grammatica.Abs.AssgnDiv }
  | '-=' { Grammatica.Abs.AssgnSub }
  | '^=' { Grammatica.Abs.AssgnPow }
  | '&=' { Grammatica.Abs.AssgnAnd }
  | '|=' { Grammatica.Abs.AssgnOr }

JumpStatement :: { Grammatica.Abs.JumpStatement }
JumpStatement
  : 'break' { Grammatica.Abs.Break }
  | 'continue' { Grammatica.Abs.Continue }
  | 'return' { Grammatica.Abs.RetExpVoid }
  | 'return' '(' RExpr ')' { Grammatica.Abs.RetExp $3 }

SelectionStatement :: { Grammatica.Abs.SelectionStatement }
SelectionStatement
  : 'if' '(' RExpr ')' Block { Grammatica.Abs.IfNoElse $3 $5 }
  | 'if' '(' RExpr ')' Block 'else' Block { Grammatica.Abs.IfElse $3 $5 $7 }

IterStatement :: { Grammatica.Abs.IterStatement }
IterStatement
  : 'while' '(' RExpr ')' Block { Grammatica.Abs.While $3 $5 }

RExpr :: { Grammatica.Abs.RExpr }
RExpr
  : RExpr1 { $1 } | RExpr '||' RExpr1 { Grammatica.Abs.Or $1 $3 }

RExpr1 :: { Grammatica.Abs.RExpr }
RExpr1
  : RExpr2 { $1 } | RExpr1 '&&' RExpr2 { Grammatica.Abs.And $1 $3 }

RExpr2 :: { Grammatica.Abs.RExpr }
RExpr2 : RExpr3 { $1 } | '!' RExpr3 { Grammatica.Abs.Not $2 }

RExpr3 :: { Grammatica.Abs.RExpr }
RExpr3 : RExpr4 { $1 }

RExpr4 :: { Grammatica.Abs.RExpr }
RExpr4 : RExpr5 { $1 }

RExpr5 :: { Grammatica.Abs.RExpr }
RExpr5
  : RExpr6 { $1 }
  | RExpr6 '==' RExpr6 { Grammatica.Abs.Eq $1 $3 }
  | RExpr6 '!=' RExpr6 { Grammatica.Abs.Neq $1 $3 }
  | RExpr6 '<' RExpr6 { Grammatica.Abs.Lt $1 $3 }
  | RExpr6 '<=' RExpr6 { Grammatica.Abs.LtE $1 $3 }
  | RExpr6 '>' RExpr6 { Grammatica.Abs.Gt $1 $3 }
  | RExpr6 '>=' RExpr6 { Grammatica.Abs.GtE $1 $3 }

RExpr6 :: { Grammatica.Abs.RExpr }
RExpr6 : RExpr7 { $1 }

RExpr7 :: { Grammatica.Abs.RExpr }
RExpr7
  : RExpr8 { $1 }
  | RExpr7 '+' RExpr8 { Grammatica.Abs.Add $1 $3 }
  | RExpr7 '-' RExpr8 { Grammatica.Abs.Sub $1 $3 }

RExpr8 :: { Grammatica.Abs.RExpr }
RExpr8
  : RExpr9 { $1 }
  | RExpr8 '*' RExpr9 { Grammatica.Abs.Mul $1 $3 }
  | RExpr8 '/' RExpr9 { Grammatica.Abs.Div $1 $3 }
  | RExpr8 '%' RExpr9 { Grammatica.Abs.Mod $1 $3 }

RExpr9 :: { Grammatica.Abs.RExpr }
RExpr9
  : RExpr10 { $1 } | RExpr10 '**' RExpr9 { Grammatica.Abs.Pow $1 $3 }

RExpr10 :: { Grammatica.Abs.RExpr }
RExpr10 : RExpr11 { $1 }

RExpr11 :: { Grammatica.Abs.RExpr }
RExpr11
  : RExpr12 { $1 }
  | '-' RExpr12 { Grammatica.Abs.Neg $2 }
  | '&' LExpr { Grammatica.Abs.Ref $2 }

RExpr12 :: { Grammatica.Abs.RExpr }
RExpr12 : RExpr13 { $1 }

RExpr13 :: { Grammatica.Abs.RExpr }
RExpr13
  : RExpr14 { $1 }
  | Integer { Grammatica.Abs.Int $1 }
  | Char { Grammatica.Abs.Char $1 }
  | String { Grammatica.Abs.String $1 }
  | Double { Grammatica.Abs.Float $1 }
  | Boolean { Grammatica.Abs.Bool $1 }
  | RExpr14 { $1 }

RExpr14 :: { Grammatica.Abs.RExpr }
RExpr14
  : '(' RExpr ')' { $2 }
  | '[' ListRExpr13 ']' { Grammatica.Abs.Array $2 }

ListRExpr13 :: { [Grammatica.Abs.RExpr] }
ListRExpr13
  : {- empty -} { [] }
  | RExpr13 { (:[]) $1 }
  | RExpr13 ',' ListRExpr13 { (:) $1 $3 }

RExpr15 :: { Grammatica.Abs.RExpr }
RExpr15 : LExpr { Grammatica.Abs.Lexpr $1 }

RExpr16 :: { Grammatica.Abs.RExpr }
RExpr16 : Incr { Grammatica.Abs.Increment $1 }

Incr :: { Grammatica.Abs.Incr }
Incr
  : '++' BLExpr { Grammatica.Abs.PreInc $2 }
  | '--' BLExpr { Grammatica.Abs.PreDecr $2 }
  | BLExpr '++' { Grammatica.Abs.PostInc $1 }
  | BLExpr '--' { Grammatica.Abs.PostDecr $1 }

LExpr :: { Grammatica.Abs.LExpr }
LExpr : '$' RExpr { Grammatica.Abs.Deref $2 }

LExpr2 :: { Grammatica.Abs.LExpr }
LExpr2 : BLExpr { Grammatica.Abs.BasLExpr $1 }

BLExpr :: { Grammatica.Abs.BLExpr }
BLExpr
  : BLExpr '[' RExpr ']' { Grammatica.Abs.ArrayEl $1 $3 }
  | Ident { Grammatica.Abs.Id $1 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
