Grammatica/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.3 from Grammatica/Par.y
-----------------------------------------------------------------------------

state 60 contains 35 reduce/reduce conflicts.
state 81 contains 1 shift/reduce conflicts.
state 85 contains 3 shift/reduce conflicts.
state 87 contains 2 shift/reduce conflicts.
state 89 contains 6 shift/reduce conflicts.
state 100 contains 1 shift/reduce conflicts.
state 192 contains 1 shift/reduce conflicts.
state 201 contains 3 shift/reduce conflicts.
state 202 contains 3 shift/reduce conflicts.
state 209 contains 1 shift/reduce conflicts.

rule 122 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDecl -> ListDecl                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pListParameter -> ListParameter             (3)
	%start_pParameter -> Parameter                     (4)
	%start_pType -> Type                               (5)
	%start_pBasicType -> BasicType                     (6)
	%start_pBoolean -> Boolean                         (7)
	%start_pCompoundType -> CompoundType               (8)
	%start_pBlock -> Block                             (9)
	%start_pListStatement -> ListStatement             (10)
	%start_pStatement -> Statement                     (11)
	%start_pAssignment_op -> Assignment_op             (12)
	%start_pJumpStatement -> JumpStatement             (13)
	%start_pSelectionStatement -> SelectionStatement   (14)
	%start_pIterStatement -> IterStatement             (15)
	%start_pRExpr -> RExpr                             (16)
	%start_pRExpr1 -> RExpr1                           (17)
	%start_pRExpr2 -> RExpr2                           (18)
	%start_pRExpr3 -> RExpr3                           (19)
	%start_pRExpr4 -> RExpr4                           (20)
	%start_pRExpr5 -> RExpr5                           (21)
	%start_pRExpr6 -> RExpr6                           (22)
	%start_pRExpr7 -> RExpr7                           (23)
	%start_pRExpr8 -> RExpr8                           (24)
	%start_pRExpr9 -> RExpr9                           (25)
	%start_pRExpr10 -> RExpr10                         (26)
	%start_pRExpr11 -> RExpr11                         (27)
	%start_pRExpr12 -> RExpr12                         (28)
	%start_pRExpr13 -> RExpr13                         (29)
	%start_pRExpr14 -> RExpr14                         (30)
	%start_pListRExpr13 -> ListRExpr13                 (31)
	%start_pRExpr15 -> RExpr15                         (32)
	%start_pRExpr16 -> RExpr16                         (33)
	%start_pIncr -> Incr                               (34)
	%start_pLExpr -> LExpr                             (35)
	%start_pLExpr2 -> LExpr2                           (36)
	%start_pBLExpr -> BLExpr                           (37)
	Ident -> L_Ident                                   (38)
	Char -> L_charac                                   (39)
	Double -> L_doubl                                  (40)
	Integer -> L_integ                                 (41)
	String -> L_quoted                                 (42)
	Program -> ListDecl                                (43)
	ListDecl ->                                        (44)
	ListDecl -> Decl                                   (45)
	ListDecl -> Decl '§' ListDecl                      (46)
	Decl -> 'def' Ident ':' Type ':=' RExpr            (47)
	Decl -> 'var' Ident ':' Type ':=' RExpr            (48)
	Decl -> 'def' Ident '(' ListParameter ')' ':' Type Block   (49)
	ListParameter ->                                   (50)
	ListParameter -> Parameter                         (51)
	ListParameter -> Parameter ',' ListParameter       (52)
	Parameter -> Ident ':' Type                        (53)
	Type -> BasicType                                  (54)
	Type -> CompoundType                               (55)
	BasicType -> 'bool'                                (56)
	BasicType -> 'char'                                (57)
	BasicType -> 'int'                                 (58)
	BasicType -> 'string'                              (59)
	BasicType -> 'float'                               (60)
	BasicType -> 'void'                                (61)
	Boolean -> 'True'                                  (62)
	Boolean -> 'False'                                 (63)
	CompoundType -> '[' RExpr ']' Type                 (64)
	CompoundType -> '[' ']' Type                       (65)
	CompoundType -> '&' Type                           (66)
	Block -> '{' ListDecl ListStatement '}'            (67)
	ListStatement ->                                   (68)
	ListStatement -> Statement                         (69)
	ListStatement -> Statement '§' ListStatement       (70)
	Statement -> Block                                 (71)
	Statement -> JumpStatement                         (72)
	Statement -> IterStatement                         (73)
	Statement -> SelectionStatement                    (74)
	Statement -> LExpr Assignment_op RExpr             (75)
	Statement -> LExpr                                 (76)
	Assignment_op -> ':='                              (77)
	Assignment_op -> '*='                              (78)
	Assignment_op -> '+='                              (79)
	Assignment_op -> '/='                              (80)
	Assignment_op -> '-='                              (81)
	Assignment_op -> '^='                              (82)
	Assignment_op -> '&='                              (83)
	Assignment_op -> '|='                              (84)
	JumpStatement -> 'break'                           (85)
	JumpStatement -> 'continue'                        (86)
	JumpStatement -> 'return'                          (87)
	JumpStatement -> 'return' '(' RExpr ')'            (88)
	SelectionStatement -> 'if' '(' RExpr ')' Block     (89)
	SelectionStatement -> 'if' '(' RExpr ')' Block 'else' Block   (90)
	IterStatement -> 'while' '(' RExpr ')' Block       (91)
	RExpr -> RExpr1                                    (92)
	RExpr -> RExpr '||' RExpr1                         (93)
	RExpr1 -> RExpr2                                   (94)
	RExpr1 -> RExpr1 '&&' RExpr2                       (95)
	RExpr2 -> RExpr3                                   (96)
	RExpr2 -> '!' RExpr3                               (97)
	RExpr3 -> RExpr4                                   (98)
	RExpr4 -> RExpr5                                   (99)
	RExpr5 -> RExpr6                                   (100)
	RExpr5 -> RExpr6 '==' RExpr6                       (101)
	RExpr5 -> RExpr6 '!=' RExpr6                       (102)
	RExpr5 -> RExpr6 '<' RExpr6                        (103)
	RExpr5 -> RExpr6 '<=' RExpr6                       (104)
	RExpr5 -> RExpr6 '>' RExpr6                        (105)
	RExpr5 -> RExpr6 '>=' RExpr6                       (106)
	RExpr6 -> RExpr7                                   (107)
	RExpr7 -> RExpr8                                   (108)
	RExpr7 -> RExpr7 '+' RExpr8                        (109)
	RExpr7 -> RExpr7 '-' RExpr8                        (110)
	RExpr8 -> RExpr9                                   (111)
	RExpr8 -> RExpr8 '*' RExpr9                        (112)
	RExpr8 -> RExpr8 '/' RExpr9                        (113)
	RExpr8 -> RExpr8 '%' RExpr9                        (114)
	RExpr9 -> RExpr10                                  (115)
	RExpr9 -> RExpr10 '**' RExpr9                      (116)
	RExpr10 -> RExpr11                                 (117)
	RExpr11 -> RExpr12                                 (118)
	RExpr11 -> '-' RExpr12                             (119)
	RExpr11 -> '&' LExpr                               (120)
	RExpr12 -> RExpr13                                 (121)
	RExpr13 -> RExpr14                                 (122)
	RExpr13 -> Integer                                 (123)
	RExpr13 -> Char                                    (124)
	RExpr13 -> String                                  (125)
	RExpr13 -> Double                                  (126)
	RExpr13 -> Boolean                                 (127)
	RExpr13 -> RExpr14                                 (128)
	RExpr14 -> '(' RExpr ')'                           (129)
	RExpr14 -> '[' ListRExpr13 ']'                     (130)
	ListRExpr13 ->                                     (131)
	ListRExpr13 -> RExpr13                             (132)
	ListRExpr13 -> RExpr13 ',' ListRExpr13             (133)
	RExpr15 -> LExpr                                   (134)
	RExpr16 -> Incr                                    (135)
	Incr -> '++' BLExpr                                (136)
	Incr -> '--' BLExpr                                (137)
	Incr -> BLExpr '++'                                (138)
	Incr -> BLExpr '--'                                (139)
	LExpr -> '$' RExpr                                 (140)
	LExpr2 -> BLExpr                                   (141)
	BLExpr -> BLExpr '[' RExpr ']'                     (142)
	BLExpr -> Ident                                    (143)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'$'            { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'&='           { PT _ (TS _ 7) }
	'('            { PT _ (TS _ 8) }
	')'            { PT _ (TS _ 9) }
	'*'            { PT _ (TS _ 10) }
	'**'           { PT _ (TS _ 11) }
	'*='           { PT _ (TS _ 12) }
	'+'            { PT _ (TS _ 13) }
	'++'           { PT _ (TS _ 14) }
	'+='           { PT _ (TS _ 15) }
	','            { PT _ (TS _ 16) }
	'-'            { PT _ (TS _ 17) }
	'--'           { PT _ (TS _ 18) }
	'-='           { PT _ (TS _ 19) }
	'/'            { PT _ (TS _ 20) }
	'/='           { PT _ (TS _ 21) }
	':'            { PT _ (TS _ 22) }
	':='           { PT _ (TS _ 23) }
	'<'            { PT _ (TS _ 24) }
	'<='           { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'False'        { PT _ (TS _ 29) }
	'True'         { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'^='           { PT _ (TS _ 33) }
	'bool'         { PT _ (TS _ 34) }
	'break'        { PT _ (TS _ 35) }
	'char'         { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'def'          { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'float'        { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'string'       { PT _ (TS _ 44) }
	'var'          { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'|='           { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	'§'            { PT _ (TS _ 52) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDecl rule  1
	%start_pDecl    rule  2
	%start_pListParameter rule  3
	%start_pParameter rule  4
	%start_pType    rule  5
	%start_pBasicType rule  6
	%start_pBoolean rule  7
	%start_pCompoundType rule  8
	%start_pBlock   rule  9
	%start_pListStatement rule  10
	%start_pStatement rule  11
	%start_pAssignment_op rule  12
	%start_pJumpStatement rule  13
	%start_pSelectionStatement rule  14
	%start_pIterStatement rule  15
	%start_pRExpr   rule  16
	%start_pRExpr1  rule  17
	%start_pRExpr2  rule  18
	%start_pRExpr3  rule  19
	%start_pRExpr4  rule  20
	%start_pRExpr5  rule  21
	%start_pRExpr6  rule  22
	%start_pRExpr7  rule  23
	%start_pRExpr8  rule  24
	%start_pRExpr9  rule  25
	%start_pRExpr10 rule  26
	%start_pRExpr11 rule  27
	%start_pRExpr12 rule  28
	%start_pRExpr13 rule  29
	%start_pRExpr14 rule  30
	%start_pListRExpr13 rule  31
	%start_pRExpr15 rule  32
	%start_pRExpr16 rule  33
	%start_pIncr    rule  34
	%start_pLExpr   rule  35
	%start_pLExpr2  rule  36
	%start_pBLExpr  rule  37
	Ident           rule  38
	Char            rule  39
	Double          rule  40
	Integer         rule  41
	String          rule  42
	Program         rule  43
	ListDecl        rules 44, 45, 46
	Decl            rules 47, 48, 49
	ListParameter   rules 50, 51, 52
	Parameter       rule  53
	Type            rules 54, 55
	BasicType       rules 56, 57, 58, 59, 60, 61
	Boolean         rules 62, 63
	CompoundType    rules 64, 65, 66
	Block           rule  67
	ListStatement   rules 68, 69, 70
	Statement       rules 71, 72, 73, 74, 75, 76
	Assignment_op   rules 77, 78, 79, 80, 81, 82, 83, 84
	JumpStatement   rules 85, 86, 87, 88
	SelectionStatement rules 89, 90
	IterStatement   rule  91
	RExpr           rules 92, 93
	RExpr1          rules 94, 95
	RExpr2          rules 96, 97
	RExpr3          rule  98
	RExpr4          rule  99
	RExpr5          rules 100, 101, 102, 103, 104, 105, 106
	RExpr6          rule  107
	RExpr7          rules 108, 109, 110
	RExpr8          rules 111, 112, 113, 114
	RExpr9          rules 115, 116
	RExpr10         rule  117
	RExpr11         rules 118, 119, 120
	RExpr12         rule  121
	RExpr13         rules 122, 123, 124, 125, 126, 127, 128
	RExpr14         rules 129, 130
	ListRExpr13     rules 131, 132, 133
	RExpr15         rule  134
	RExpr16         rule  135
	Incr            rules 136, 137, 138, 139
	LExpr           rule  140
	LExpr2          rule  141
	BLExpr          rules 142, 143

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'def'          shift, and enter state 147
	'var'          shift, and enter state 148
	%eof           reduce using rule 44

	Program        goto state 151
	ListDecl       goto state 152
	Decl           goto state 150

State 1

	%start_pListDecl -> . ListDecl                      (rule 1)

	'def'          shift, and enter state 147
	'var'          shift, and enter state 148
	%eof           reduce using rule 44

	ListDecl       goto state 149
	Decl           goto state 150

State 2

	%start_pDecl -> . Decl                              (rule 2)

	'def'          shift, and enter state 147
	'var'          shift, and enter state 148

	Decl           goto state 146

State 3

	%start_pListParameter -> . ListParameter            (rule 3)

	L_Ident        shift, and enter state 39
	%eof           reduce using rule 50

	Ident          goto state 142
	ListParameter  goto state 144
	Parameter      goto state 145

State 4

	%start_pParameter -> . Parameter                    (rule 4)

	L_Ident        shift, and enter state 39

	Ident          goto state 142
	Parameter      goto state 143

State 5

	%start_pType -> . Type                              (rule 5)

	'&'            shift, and enter state 129
	'['            shift, and enter state 130
	'bool'         shift, and enter state 133
	'char'         shift, and enter state 134
	'float'        shift, and enter state 135
	'int'          shift, and enter state 136
	'string'       shift, and enter state 137
	'void'         shift, and enter state 138

	Type           goto state 139
	BasicType      goto state 140
	CompoundType   goto state 141

State 6

	%start_pBasicType -> . BasicType                    (rule 6)

	'bool'         shift, and enter state 133
	'char'         shift, and enter state 134
	'float'        shift, and enter state 135
	'int'          shift, and enter state 136
	'string'       shift, and enter state 137
	'void'         shift, and enter state 138

	BasicType      goto state 132

State 7

	%start_pBoolean -> . Boolean                        (rule 7)

	'False'        shift, and enter state 63
	'True'         shift, and enter state 64

	Boolean        goto state 131

State 8

	%start_pCompoundType -> . CompoundType              (rule 8)

	'&'            shift, and enter state 129
	'['            shift, and enter state 130

	CompoundType   goto state 128

State 9

	%start_pBlock -> . Block                            (rule 9)

	'{'            shift, and enter state 124

	Block          goto state 127

State 10

	%start_pListStatement -> . ListStatement            (rule 10)

	'$'            shift, and enter state 45
	'break'        shift, and enter state 106
	'continue'     shift, and enter state 107
	'if'           shift, and enter state 104
	'return'       shift, and enter state 108
	'while'        shift, and enter state 102
	'{'            shift, and enter state 124
	%eof           reduce using rule 68

	Block          goto state 118
	ListStatement  goto state 125
	Statement      goto state 126
	JumpStatement  goto state 120
	SelectionStatementgoto state 121
	IterStatement  goto state 122
	LExpr          goto state 123

State 11

	%start_pStatement -> . Statement                    (rule 11)

	'$'            shift, and enter state 45
	'break'        shift, and enter state 106
	'continue'     shift, and enter state 107
	'if'           shift, and enter state 104
	'return'       shift, and enter state 108
	'while'        shift, and enter state 102
	'{'            shift, and enter state 124

	Block          goto state 118
	Statement      goto state 119
	JumpStatement  goto state 120
	SelectionStatementgoto state 121
	IterStatement  goto state 122
	LExpr          goto state 123

State 12

	%start_pAssignment_op -> . Assignment_op            (rule 12)

	'&='           shift, and enter state 110
	'*='           shift, and enter state 111
	'+='           shift, and enter state 112
	'-='           shift, and enter state 113
	'/='           shift, and enter state 114
	':='           shift, and enter state 115
	'^='           shift, and enter state 116
	'|='           shift, and enter state 117

	Assignment_op  goto state 109

State 13

	%start_pJumpStatement -> . JumpStatement            (rule 13)

	'break'        shift, and enter state 106
	'continue'     shift, and enter state 107
	'return'       shift, and enter state 108

	JumpStatement  goto state 105

State 14

	%start_pSelectionStatement -> . SelectionStatement    (rule 14)

	'if'           shift, and enter state 104

	SelectionStatementgoto state 103

State 15

	%start_pIterStatement -> . IterStatement            (rule 15)

	'while'        shift, and enter state 102

	IterStatement  goto state 101

State 16

	%start_pRExpr -> . RExpr                            (rule 16)

	'!'            shift, and enter state 96
	'&'            shift, and enter state 76
	'('            shift, and enter state 62
	'-'            shift, and enter state 77
	'False'        shift, and enter state 63
	'True'         shift, and enter state 64
	'['            shift, and enter state 65
	L_charac       shift, and enter state 66
	L_doubl        shift, and enter state 67
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 69

	Char           goto state 54
	Double         goto state 55
	Integer        goto state 56
	String         goto state 57
	Boolean        goto state 58
	RExpr          goto state 99
	RExpr1         goto state 100
	RExpr2         goto state 98
	RExpr3         goto state 95
	RExpr4         goto state 93
	RExpr5         goto state 91
	RExpr6         goto state 89
	RExpr7         goto state 87
	RExpr8         goto state 85
	RExpr9         goto state 83
	RExpr10        goto state 81
	RExpr11        goto state 79
	RExpr12        goto state 75
	RExpr13        goto state 73
	RExpr14        goto state 60

State 17

	%start_pRExpr1 -> . RExpr1                          (rule 17)

	'!'            shift, and enter state 96
	'&'            shift, and enter state 76
	'('            shift, and enter state 62
	'-'            shift, and enter state 77
	'False'        shift, and enter state 63
	'True'         shift, and enter state 64
	'['            shift, and enter state 65
	L_charac       shift, and enter state 66
	L_doubl        shift, and enter state 67
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 69
